# differentiator

./: BinaryTree.cpp  BinaryTree.hpp  CMakeLists.txt  Makefile  Number.cpp  Number.hpp  Obj.cpp  Obj.hpp  README.md  Symbol.cpp  Symbol.hpp  differentiator.cpp  differentiator.hpp  main.cpp
String_Lib/: String.cpp  String.hpp
new_tests/: all_functions.tex  smth_minus_smth.tex
res/: output.tex
src/: BinaryTree.cpp  BinaryTree.hpp  Number.cpp  Number.hpp  Obj.cpp  Obj.hpp  Symbol.cpp  Symbol.hpp  TrackingAllocator.hpp  differentiator.cpp  differentiator.hpp
